<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/widget_fondo"
    android:padding="12dp">

    <ImageView
        android:id="@+id/radio_icon_estado"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@android:drawable/ic_media_play"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/widget_radio_play" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radio_cabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_radio_cabecera"
            android:textColor="#CCE0E0E0"
            android:textSize="10sp"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/radio_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_radio_sin_radio"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="13sp"
            android:maxLines="1"
            android:ellipsize="end" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/radio_btn_playpause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_media_play"
        android:contentDescription="@string/widget_radio_play" />

    <ImageButton
        android:id="@+id/radio_btn_stop"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_lock_power_off"
        android:contentDescription="@string/widget_radio_stop" />
</LinearLayout>
